examples/test/testpolicy17248.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17248
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key6: value32
      key17: value18
      key47: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value24
          key27: value41
      podSelector:
        matchLabels:
          key33: value30
          key16: value30
